fix: Fix service tests and improve QueryBuilder